2007-05-09  Chris Toshok  <toshok@hungry.com>

	* compzilla/src/compzillaWindowEvents.cpp: we need to include
	nsMemory.h here to fix compilation errors.

2007-05-09  Chris Toshok  <toshok@hungry.com>

	* compzilla/src/compzillaWindow.h: add prototype for
	CZ_NewCompzillaWindow.

	* compzilla/src/compzillaWindow.cpp: #include nsMemory or else we
	get undefined nsMemory::Clone symbols in trunk mozilla.

	add NS_IMPL_CI_INTERFACE_GETTER for compzillaWindow to fix
	undefined symbols when we run.

	add CZ_NewCompzillaWindow function to be used instead of "new
	compzillaWindow".

	(EnsurePixmap): spew an error if we fail to get the backing pixmap
	for a window.
	
	(PropertyChanged): XGetWMHints can return NULL.

	(WindowConfigured): if the window is resized the backing pixmap
	becomes invalid.  make sure we free our old one and set mPixmap to
	null so we'll refetch it the next time EnsurePixmap is called.

2007-05-09  Chris Toshok  <toshok@hungry.com>

	* compzilla/Makefile.am: add compzilla script installation to
	bindir, and quiet down automake 1.10 (it complains about gmake
	specific rules.)

	* configure.in: add compzilla script generation.

	* compzilla/compzilla.in: new conveience script which runs the
	firefox binary with our chrome.
	
2007-05-08  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaModule.cpp: Expose compzillaWindow and
	compzillaWindowEvent to JS by calling NS_DECL_CLASSINFO.

	* compzilla/src/compzillaWindowEvents.cpp: Make
	compzillaWindowEvents implement nsIDOMEvent, since the call
	NS_NewDOMEvent used by mozilla-internal event creators is not
	exposed.  Expose classinfo so JS can access members easily.

	* chrome/content/start2.js/xul: Add these xul document alternative
	versions of start.xul/js

2007-05-08  Chris Toshok  <toshok@hungry.com>

	* compzilla/chrome/content/windowStack.js: soptimize
	toggleDesktop, and add some XXX comments.

2007-05-08  Chris Toshok  <toshok@hungry.com>
